# linux-haskell-portfolio

./: .gitignore  LICENSE  PR_DEMO.md  README.md  linux-portfolio.cabal  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
docs/: LEARNING_GUIDE.md
src/FileSystem/: Operations.hs  PathUtils.hs  Permissions.hs
src/Linux/: Core.hs
src/Network/: Client.hs  Socket.hs  SocketDemo.hs
src/Process/: Communication.hs  Management.hs
src/Shell/: Commands.hs  Parser.hs
src/System/: Calls.hs  Memory.hs
test/: Spec.hs
