cabal-version: 2.2
name:          linux-portfolio
version:       0.1.0.0
synopsis:      Linux OS learning portfolio in Haskell
description:   Educational portfolio for learning Linux OS concepts through Haskell programming
author:        Portfolio Creator
maintainer:    portfolio@example.com
license:       MIT
license-file:  LICENSE
category:      Education, System
build-type:    Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        FileSystem.Operations
        FileSystem.Permissions
        FileSystem.PathUtils
        Process.Management
        Process.Communication
        Network.Socket
        Network.Client
        System.Calls
        System.Memory
        Shell.Commands
        Shell.Parser
        Linux.Core
    build-depends:    
        base ^>=4.14.3.0,
        directory,
        filepath,
        process,
        network,
        bytestring,
        text,
        unix,
        containers,
        time,
        parsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable linux-portfolio
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base ^>=4.14.3.0,
        linux-portfolio
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite linux-portfolio-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    
        base ^>=4.14.3.0,
        linux-portfolio,
        hspec